<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ConnectDev">

    <TextView
        android:id="@+id/connect_dev_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/text_connect_dev_info"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connect_dev_uuids_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_uuids"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connect_dev_info" />

    <RadioGroup
        android:id="@+id/connect_dev_uuids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/connect_dev_uuids_title" />

    <EditText
        android:id="@+id/connect_dev_sendtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/text_sendtext"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/connect_dev_newline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connect_dev_uuids" />

    <CheckBox
        android:id="@+id/connect_dev_newline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/text_cr_lf"
        app:layout_constraintBaseline_toBaselineOf="@id/connect_dev_sendtext"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/connect_dev_recv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_received"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/connect_dev_sendtext" />

    <ScrollView
        android:id="@+id/connect_dev_scroll_recv"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@id/connect_dev_buttons"
        app:layout_constraintTop_toBottomOf="@id/connect_dev_recv_title"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="70dp">


        <TextView
            android:id="@+id/connect_device_recevied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/connect_dev_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/connect_dev_button_sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/text_sdp" />

        <Button
            android:id="@+id/connect_dev_button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/text_connect" />

        <Button
            android:id="@+id/connect_dev_button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_sendtext" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>